--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "flow-bin": "^0.45.0",
+    "flow-bin": "0.45.0",
     "jest": "^20.0.4",
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
