Fix @providesModule naming collision errors on CI

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "uuid-1345": "^0.99.6"
   },
   "jest": {
-    "automock": true
+    "automock": true,
+    "modulePathIgnorePatterns": ["<rootDir>/lib/"]
   }
 }
