--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
-    "lint": "eslint src --ext .js,.jsx --ignore-pattern **/*.spec.js",
+    "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/*_spec.js'",
     "start": "node lib/core.js | bunyan -o short",
     "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
@@ -45,7 +45,8 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jest": "^21.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "0.45.0",
     "jest": "^20.0.4",
@@ -79,7 +80,7 @@
     "properties": "1.2.1",
     "rc-menu": "^5.0.10",
     "react": "^15.6.1",
-    "react-apollo": "^1.4.8",
+    "react-apollo": "1.4.15",
     "react-aria-menubutton": "^5.0.2",
     "react-dom": "^15.6.1",
     "react-dropdown": "heuels/react-dropdown#disabled_classname",
