Fix flow configuration

--- a/.flowconfig
+++ b/.flowconfig
@@ -16,4 +16,5 @@ esproposal.class_instance_fields=enable
 module.ignore_non_literal_requires=true
 module.system.node.resolve_dirname=src
 module.system.node.resolve_dirname=node_modules
-module.name_mapper='.*\.styl$' -> '<PROJECT_ROOT>/src/__mocks__/styl.js'
+module.file_ext=.styl
+module.name_mapper.extension='styl' -> 'empty/object'
