--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "forge": "2.3.0",
     "graphql": "0.11.7",
     "graphql-tools": "^1.0.0",
+    "jest-cli": "21.1.0",
     "mongoose": "4.11.14",
     "nconf": "^0.8.4",
     "node-forge": "^0.6.48",
