--- a/src/core.db/package.json
+++ b/src/core.db/package.json
@@ -5,12 +5,8 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": [
-      "log"
-    ],
-    "provides": [
-      "db"
-    ]
+    "consumes": ["bus", "log"],
+    "provides": ["db"]
   },
   "dependencies": {
     "mongoose": "^4.9.6"
