--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "0.45.0",
     "jest": "^20.0.4",
+    "prettier": "^1.7.4",
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
