--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,12 @@
 {
-  "extends": "airbnb",
+  "extends": ["prettier"],
   "parser": "babel-eslint",
-  "plugins": ["flowtype", "jest", "react"],
+  "plugins": ["flowtype", "jest", "prettier", "react"],
   "globals": { "document": true },
   "rules": {
-    "arrow-parens": ["warn"],
-    "global-require": ["off"],
-    "import/no-dynamic-require": ["off"],
-    "import/no-extraneous-dependencies": ["off"],
-    "import/no-named-as-default": ["warn"],
-    "jsx-a11y/heading-has-content": ["off"],
-    "jsx-a11y/href-no-hash": ["off"],
-    "jsx-a11y/img-has-alt": ["off"],
-    "jsx-a11y/label-has-for": ["off"],
-    "jsx-a11y/no-static-element-interactions": ["off"],
-    "no-confusing-arrow": ["warn"],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "max-len": ["error", 120, { "ignoreStrings": true }],
-    "react/prop-types": ["off"],
-    "react/require-default-props": ["off"]
+    "prettier/prettier": [
+      "error",
+      { "singleQuote": true, "trailingComma": "all" }
+    ]
   }
 }
