refactor(core.agenda): rename core.planner to core.agenda

--- a/etc/briskhome.conf
+++ b/etc/briskhome.conf
@@ -62,7 +62,7 @@ target = db
 # file.name = briskhome.log
 
 
-[core.planner]
+[core.agenda]
 # This section contains scheduler preferences.
 # By default database connection parameters are copied from core.db config. You
 # can override them if you want to use another database and/or credentials.
