--- a/etc/development.conf
+++ b/etc/development.conf
@@ -133,7 +133,7 @@ pass = ${core.db|pass}
 # If you change this port here be sure to change it in device firmwares also.
 port = 1883
 
-[core.planner]
+[core.agenda]
 name = ${core.db|name}
 host = ${core.db|host}
 user = ${core.db|user}
