--- a/src/core.agenda/package.json
+++ b/src/core.agenda/package.json
@@ -5,7 +5,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": ["db", "log"],
+    "consumes": ["bus", "db", "log"],
     "provides": ["agenda"]
   },
   "dependencies": {
