--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/*_spec.js'",
     "start": "node lib/core.js | bunyan -o short",
     "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
+    "start-stop": "node lib/core.js --stop",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
     "test": "node_modules/.bin/jest src --coverage",
     "postinstall": "npm config set briskhome_dir /opt/briskhome",
