feat(core.agenda): system scheduler (#100)
* refactor(core.agenda): rename core.planner to core.agenda
* feat(core.agenda): reuse database connection from core.db
* refactor(core.agenda): add flow
* refactor(core.agenda): run poll job with agenda
* test: disable automock
* test(core.agenda): unit tests

--- a/src/core.agenda/package.json
+++ b/src/core.agenda/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "@briskhome/core.planner",
+  "name": "@briskhome/core.agenda",
   "version": "0.3.0-alpha.1",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "private": true,
   "plugin": {
-    "consumes": [
-      "db",
-      "log"
-    ],
-    "provides": [
-      "planner"
-    ]
+    "consumes": ["bus", "db", "log"],
+    "provides": ["agenda"]
   },
   "dependencies": {
     "agenda": "^0.9.1"
