--- a/package.json
+++ b/package.json
@@ -67,13 +67,16 @@
     "agenda": "1.0.0",
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
+    "connect-mongo": "^2.0.0",
     "dataloader": "^1.3.0",
     "eventemitter2": "^4.1.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
+    "express-session": "^1.15.6",
     "graphql": "0.11.7",
     "graphql-tools": "^1.0.0",
     "jest-cli": "21.1.0",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "4.11.14",
     "nconf": "^0.8.4",
     "node-forge": "^0.6.48",
