--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
     "connect-mongo": "^2.0.0",
+    "cookie-parser": "^1.4.3",
     "dataloader": "^1.3.0",
     "eventemitter2": "^4.1.0",
     "express": "^4.15.3",
