--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "uuid-1345": "^0.99.6"
   },
   "jest": {
+    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
     "modulePathIgnorePatterns": [
       "<rootDir>/lib/"
     ],
