--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "agenda": "1.0.0",
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
-    "connect-mongo": "^2.0.0",
+    "connect-mongodb-session": "^1.4.0",
     "cookie-parser": "^1.4.3",
     "dataloader": "^1.3.0",
     "eventemitter2": "^4.1.0",
