refactor(core.db): accept connection string instead of constructing it

--- a/etc/briskhome.conf
+++ b/etc/briskhome.conf
@@ -22,16 +22,9 @@
 [core.db]
 # This section contains MongoDB connection parameters.
 #
-# hostname  Required. Hostname of the machine that runs MongoDB.
-# database  Required. Database name that Briskhome will use.
-# username  Username to use when authenticating in database.
-# password  Password to use when authenticating in database.
+# uri  Required. MongoDB connection string.
 
-hostname = localhost
-database = briskhome
-username = briskhome
-password = briskhome
-
+uri = mongodb://briskhome:briskhome@localhost:27017/briskhome
 
 [core.bus]
 # This section contains bus interface preferences.
