--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 cache: yarn
 node_js:
   - '7'
+if: ((type = push) AND (branch = master)) OR type = pull_request
 branches:
   only:
     - 'master'
