--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "codecov": "^3.0.0",
     "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
@@ -100,7 +101,9 @@
     "uuid-1345": "^0.99.6"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
     "modulePathIgnorePatterns": [
       "<rootDir>/lib/"
     ],
