feat(core.webapp): add mongo-based sessions (#106)
* chore: add express-session, connect-mongo, jsonwebtoken deps
* feat(webapp): add sessions
* chore: add passport and passport-jwt
* chore(webapp): initial session setup
* chore: change session store to connect-mongodb-session
* refactor(webapp): reasonable session parameters
* feat(webapp): proper user serialization and deserialization
* chore: remove jwt dependencies
* refactor(webapp): use mongo connection string from core.db
* chore(webapp): remove unused function

--- a/etc/briskhome.conf
+++ b/etc/briskhome.conf
@@ -58,4 +58,6 @@ target = db
 [core.webapp]
 # This section contains web application preferences.
 
+database = ${core.db|uri}
 graphiql = true
+secret = secret
