--- a/package.json
+++ b/package.json
@@ -67,10 +67,13 @@
     "agenda": "1.0.0",
     "async": "^2.1.4",
     "bunyan": "^1.8.1",
+    "connect-mongodb-session": "^1.4.0",
+    "cookie-parser": "^1.4.3",
     "dataloader": "^1.3.0",
     "eventemitter2": "^4.1.0",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
+    "express-session": "^1.15.6",
     "graphql": "0.11.7",
     "graphql-tools": "^1.0.0",
     "jest-cli": "21.1.0",
@@ -79,6 +82,7 @@
     "node-forge": "^0.6.48",
     "node-telegram-bot-api": "^0.21.1",
     "nodemon": "^1.11.0",
+    "passport": "^0.4.0",
     "properties": "1.2.1",
     "rc-menu": "^5.0.10",
     "react": "^15.6.1",
