feat(graphql): backend support for login page

--- a/etc/briskhome.conf
+++ b/etc/briskhome.conf
@@ -33,6 +33,10 @@ uri = mongodb://briskhome:briskhome@localhost:27017/briskhome
 
 interval = 60000
 
+[core.graphql]
+
+secret = secret
+
 
 [core.log]
 # This section contains logging preferences.
