--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,20 @@
 {
-  "extends": ["prettier"],
+  "extends": ["eslint:recommended", "prettier"],
   "parser": "babel-eslint",
   "plugins": ["flowtype", "jest", "prettier", "react"],
-  "globals": { "document": true },
+  "parserOptions": { "ecmaVersion": 6 },
+  "env": {
+    "node": true,
+    "browser": true,
+    "es6": true
+  },
   "rules": {
+    "no-unused-vars": ["error", { "varsIgnorePattern": "unused" }],
     "prettier/prettier": [
       "error",
       { "singleQuote": true, "trailingComma": "all" }
-    ]
+    ],
+    "react/jsx-uses-react": ["warn"],
+    "react/jsx-uses-vars": ["warn"]
   }
 }
