--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "es6": true
   },
   "rules": {
+    "no-unexpected-multiline": ["off"],
     "no-unused-vars": ["error", { "varsIgnorePattern": "unused" }],
     "prettier/prettier": [
       "error",
