chore: parse useragent and store in a cookie

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "useragent": "^2.2.1",
     "uuid-1345": "^0.99.6"
   },
   "jest": {
