chore: add bcrypt dependency

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "agenda": "1.0.0",
     "async": "^2.1.4",
+    "bcrypt": "^1.0.3",
     "bunyan": "^1.8.1",
     "connect-mongodb-session": "^1.4.0",
     "cookie-parser": "^1.4.3",
