feat(webapp): login page (#118)
* refactor(webapp/ui): enable flow and minor adjustments
* feat(graphql): backend support for login page
* feat(webapp): login page
* chore(test): unit-tests for login page
* chore: parse useragent and store in a cookie
* feat(core.webapp): login redux action
* chore: fix flow errors after rebase
* refactor: fix types and complete login process
* feat: add user reducer
* test: unit tests for button and input components
* chore: add bcrypt dependency
* refactor: use objectId and store username separately

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "agenda": "1.0.0",
     "async": "^2.1.4",
+    "bcrypt": "^1.0.3",
     "bunyan": "^1.8.1",
     "connect-mongodb-session": "^1.4.0",
     "cookie-parser": "^1.4.3",
@@ -102,6 +103,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "useragent": "^2.2.1",
     "uuid-1345": "^0.99.6"
   },
   "jest": {
