--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "babel-preset-react": "^6.24.1",
     "codecov": "^3.0.0",
     "css-loader": "^0.28.4",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^1.5.1",
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "3.3.0",
     "eslint": "^3.19.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-flowtype": "^2.32.1",
@@ -51,8 +52,8 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "0.61.0",
-    "jest": "^20.0.4",
-    "prettier": "^1.7.4",
+    "jest": "22.0.4",
+    "prettier": "1.9.2",
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
@@ -77,7 +78,6 @@
     "express-session": "^1.15.6",
     "graphql": "0.11.7",
     "graphql-tools": "^1.0.0",
-    "jest-cli": "21.1.0",
     "mongoose": "4.11.14",
     "nconf": "^0.8.4",
     "node-forge": "^0.6.48",
@@ -86,10 +86,10 @@
     "passport": "^0.4.0",
     "properties": "1.2.1",
     "rc-menu": "^5.0.10",
-    "react": "^15.6.1",
+    "react": "16.2.0",
     "react-apollo": "1.4.15",
     "react-aria-menubutton": "^5.0.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "16.2.0",
     "react-dropdown": "heuels/react-dropdown#disabled_classname",
     "react-flexbox-grid": "^1.1.3",
     "react-input-mask": "^1.0.7",
@@ -115,6 +115,10 @@
     ],
     "moduleNameMapper": {
       "\\.(css|styl)$": "<rootDir>/src/__mocks__/styl.js"
-    }
+    },
+    "setupTestFrameworkScriptFile": "<rootDir>src/utilities/jest.js",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
