--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "0.61.0",
     "jest": "22.0.4",
+    "jest-image-snapshot": "^2.2.1",
     "prettier": "1.9.2",
     "puppeteer": "^0.13.0",
     "react-router-dom": "^4.1.2",
