chore: add puppeteer dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start-stop": "node lib/core.js --stop",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
     "test": "node_modules/.bin/jest src --coverage",
+    "test-e2e": "node_modules/.bin/jest --testPathPattern='__e2e__'",
     "postinstall": "npm config set briskhome_dir /opt/briskhome",
     "webpack": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp",
     "webpack-watch": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp --watch",
@@ -54,6 +55,7 @@
     "flow-bin": "0.61.0",
     "jest": "22.0.4",
     "prettier": "1.9.2",
+    "puppeteer": "^0.13.0",
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
