test: end-to-end tests for login page (#129)
* chore: add puppeteer dependency
* test: end-to-end test for login page
* chore: add end-to-end tests to travis
* chore: add jest-image-snapshot dependency
* test: image snapshots for login page
* chore: trying out different configurations

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
-cache: yarn
+cache:
+  yarn: true
+  directories:
+    - node_modules
 node_js:
   - '8'
 branches:
@@ -10,19 +13,22 @@ jobs:
     - stage: check
       script: yarn lint
     - script: yarn flow
-    - script: yarn test
+    - script: yarn test --coverage
       after_success:
         - yarn codecov
     - stage: build
       script: yarn babel
     - script: yarn webpack
     - stage: run
-      script: yarn start-stop
+      script: yarn test-e2e
       services:
         - mongodb
       before_script:
         - mongo briskhome --eval 'db.createUser({user:"briskhome",pwd:"briskhome",roles:["readWrite"]});'
+        - mongo briskhome --eval 'db.users.insert({username:"jdoe","lastName":"Doe","firstName":"John","password":"$2a$10$MTrhrVPe.8aib7b3nI2P3uoG7eDtQaWqTY5CLE3O5A9Z05bsIII0C","type":"regular","isDisabled":false,"subscriptions":[],"devices":[],"contacts":[],"__v":0});'
         - yarn babel
+        - yarn webpack
+        - yarn start &
 addons:
   code_climate:
     repo_token: 71ee8424e2660dbc7dd88d81e0715f4434453db7fb57af35604d165d2db6203a
