--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
-    "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/*_spec.js'",
+    "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/__e2e__/*' --ignore-pattern '**/*_spec.js'",
     "start": "node lib/core.js | bunyan -o short",
     "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
     "start-stop": "node lib/core.js --stop",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
-    "test": "node_modules/.bin/jest src --coverage",
+    "test": "node_modules/.bin/jest --testPathPattern='__tests__'",
+    "test-e2e": "node_modules/.bin/jest --testPathPattern='__e2e__' --env='./utilities/jest/chromeEnvironment.js'",
     "postinstall": "npm config set briskhome_dir /opt/briskhome",
     "webpack": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp",
     "webpack-watch": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp --watch",
@@ -53,7 +54,9 @@
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "0.61.0",
     "jest": "22.0.4",
+    "jest-image-snapshot": "^2.2.1",
     "prettier": "1.9.2",
+    "puppeteer": "^0.13.0",
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
@@ -107,18 +110,19 @@
     "uuid-1345": "^0.99.6"
   },
   "jest": {
+    "rootDir": "src",
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/lib/"
+      "**/*.{js,jsx}",
+      "!**/__e2e__/*",
+      "!**/__mocks__/*",
+      "!**/__tests__/*",
+      "!core.webapp/webpack.config.js",
+      "!utilities/jest/*"
     ],
     "moduleNameMapper": {
-      "\\.(css|styl)$": "<rootDir>/src/core.webapp/__mocks__/styl.js"
+      "\\.(css|styl)$": "<rootDir>/core.webapp/__mocks__/styl.js"
     },
-    "setupTestFrameworkScriptFile": "<rootDir>src/utilities/jest/index.js",
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
+    "setupTestFrameworkScriptFile": "<rootDir>/utilities/jest/index.js",
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
