chore: mongoose flow type definitions

--- a/.flowconfig
+++ b/.flowconfig
@@ -21,3 +21,4 @@ module.name_mapper.extension='styl' -> '<PROJECT_ROOT>/flow-typed/styl.flow'
 
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
+unsafe.enable_getters_and_setters=true
