--- a/.flowconfig
+++ b/.flowconfig
@@ -17,6 +17,9 @@ module.file_ext=.json
 module.file_ext=.styl
 module.ignore_non_literal_requires=true
 module.system.node.resolve_dirname=node_modules
+
+module.name_mapper='\(core\.*\)' -> '<PROJECT_ROOT>/src/\1'
+module.name_mapper='utilities' -> '<PROJECT_ROOT>/src/utilities'
 module.name_mapper.extension='styl' -> '<PROJECT_ROOT>/flow-typed/styl.flow'
 
 esproposal.class_static_fields=enable
