--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
-    "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/__e2e__/*' --ignore-pattern '**/*_spec.js'",
+    "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/__css__/*' --ignore-pattern '**/__e2e__/*' --ignore-pattern '**/*_spec.js'",
     "start": "node lib/core.js | bunyan -o short",
     "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
     "start-stop": "node lib/core.js --stop",
     "start-ugly": "node lib/core.js --ugly | bunyan -o short",
     "test": "node_modules/.bin/jest --testPathPattern='__tests__'",
+    "test-css": "node_modules/.bin/jest --testPathPattern='__css__' --env='./utilities/jest/chromeEnvironment.js'",
     "test-e2e": "node_modules/.bin/jest --testPathPattern='__e2e__' --env='./utilities/jest/chromeEnvironment.js'",
     "postinstall": "npm config set briskhome_dir /opt/briskhome",
     "webpack": "node_modules/.bin/webpack --config ./src/core.webapp/webpack.config.js --context ./src/core.webapp",
@@ -113,6 +114,7 @@
     "rootDir": "src",
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
+      "!**/__css__/*",
       "!**/__e2e__/*",
       "!**/__mocks__/*",
       "!**/__tests__/*",
