chore: do not collect coverage from stories

--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
       "!**/__css__/*",
       "!**/__e2e__/*",
       "!**/__mocks__/*",
+      "!**/__stories__/*",
       "!**/__tests__/*",
       "!core.webapp/webpack.config.js",
       "!utilities/jest/*"
