--- a/package.json
+++ b/package.json
@@ -95,9 +95,11 @@
     "react-dom": "16.2.0",
     "react-dropdown": "heuels/react-dropdown#disabled_classname",
     "react-flexbox-grid": "^1.1.3",
+    "react-grid-layout": "^0.16.2",
     "react-input-mask": "^1.0.7",
+    "react-menu-list": "^5.0.0",
     "react-minimal-dropdown": "^1.1.1",
-    "react-modal": "^2.2.4",
+    "react-modal": "3.1.11",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-redux": "^4.0.8",
