--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,23 +3,28 @@ workflows:
   version: 2
   tests:
     jobs: 
-      - build
+      - init
       - lint:
           requires:
-            - build
+            - init
       - flow:
           requires:
-            - build
+            - init
       - test:
           requires:
-            - build
+            - init
+      - build:
+          requires:
+            - lint
+            - flow
+            - test
 jobs:
-  build:
+  init:
     docker: &node
       - image: 'node:8'
     steps:
       - checkout
-      - restore_cache: &restore_cache
+      - restore_cache: &restore_yarn_cache
           name: Restore Yarn Package Cache
           keys:
             - yarn-packages-{{ checksum "yarn.lock" }}
@@ -37,7 +42,7 @@ jobs:
     docker: *node
     steps:
       - checkout
-      - restore_cache: &restore_cache
+      - restore_cache: &restore_yarn_cache
           name: Restore Yarn Package Cache
           keys:
             - yarn-packages-{{ checksum "yarn.lock" }}
@@ -45,16 +50,27 @@ jobs:
             - yarn-packages-master
       - run: yarn lint
   flow:
-    docker:
-      - image: 'node:8'
+    docker: *node
     steps:
       - checkout
-      - restore_cache: *restore_cache
+      - restore_cache: *restore_yarn_cache
       - run: yarn flow
   test:
     docker: *node
     steps:
       - checkout
-      - restore_cache: *restore_cache
+      - restore_cache: *restore_yarn_cache
       - run: yarn test --coverage
       - run: yarn codecov
+  build:
+    docker: *node
+    steps:
+      - checkout
+      - restore_cache: *restore_yarn_cache
+      - run: yarn build
+      - run: yarn webpack
+      - save_cache:
+          name: Save build artifacts
+          key: build-{{ .Branch }}
+          paths:
+            - lib/
