chore: properly save lib to cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,6 @@ jobs:
       - run: yarn webpack
       - save_cache:
           name: Save build artifacts
-          key: build-{{ .Branch }}
+          key: build-{{ .Revision }}
           paths:
             - lib/
