--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,22 @@ workflows:
       - test:
           requires:
             - init
-      - build:
+      - babel:
           requires:
             - lint
             - flow
             - test
+      - webpack:
+          requires:
+            - lint
+            - flow
+            - test
+      - run:
+          context: demo
+          requires:
+            - babel
+            - webpack
+
 jobs:
   init:
     docker: &node
@@ -25,30 +36,24 @@ jobs:
     steps:
       - checkout
       - restore_cache: &restore_yarn_cache
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
-            - yarn-packages-{{ .Branch }}
-            - yarn-packages-master
+          name: Restore yarn cache
+          key: v1-briskhome-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
       - run:
-          name: Install Dependencies
+          name: Install dependencies
           command: yarn install
       - save_cache:
-          name: Save Yarn Package Cache
-          key: yarn-packages-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          name: Save yarn cache
+          key: v1-briskhome-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
             - node_modules/
   lint:
     docker: *node
     steps:
       - checkout
-      - restore_cache: &restore_yarn_cache
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
-            - yarn-packages-{{ .Branch }}
-            - yarn-packages-master
-      - run: yarn lint
+      - restore_cache: *restore_yarn_cache
+      - run:
+          name: Lint
+          command: yarn lint
   flow:
     docker: *node
     steps:
@@ -62,15 +67,37 @@ jobs:
       - restore_cache: *restore_yarn_cache
       - run: yarn test --coverage
       - run: yarn codecov
-  build:
+  babel:
     docker: *node
     steps:
       - checkout
       - restore_cache: *restore_yarn_cache
-      - run: yarn build
-      - run: yarn webpack
+      - run: yarn babel
       - save_cache:
-          name: Save build artifacts
-          key: build-{{ .Revision }}
+          name: Save compiled backend sources
+          key: v1-briskhome-babel-{{ .Revision }}
           paths:
             - lib/
+  webpack:
+    docker: *node
+    steps:
+      - checkout
+      - restore_cache: *restore_yarn_cache
+      - run: yarn webpack
+      - save_cache:
+          name: Save compiled frontend sources
+          key: v1-briskhome-webpack-{{ .Revision }}
+          paths:
+            - lib/core.webapp/public/assets/js
+  run:
+    docker: *node
+    steps:
+      - checkout
+      - restore_cache: *restore_yarn_cache
+      - restore_cache: &restore_babel_cache
+          name: Restore babel cache
+          key: v1-briskhome-babel-{{ .Revision }}
+      - restore_cache: &restore_webpack_cache
+          name: Restore webpack cache
+          key: v1-briskhome-webpack-{{ .Revision }}
+      - run: yarn start
