--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "graphql": "0.11.7",
     "graphql-tools": "^1.0.0",
     "mongoose": "4.11.14",
-    "nconf": "^0.8.4",
+    "nconf": "0.10.0",
     "node-forge": "^0.6.48",
     "node-telegram-bot-api": "^0.21.1",
     "nodemon": "^1.11.0",
