--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-idx": "^2.4.0",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
@@ -81,6 +82,7 @@
     "express-session": "^1.15.6",
     "graphql": "0.11.7",
     "graphql-tools": "^1.0.0",
+    "idx": "^2.4.0",
     "mongoose": "4.11.14",
     "nconf": "0.10.0",
     "node-forge": "^0.7.4",
