--- a/src/core.agenda/package.json
+++ b/src/core.agenda/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@briskhome/core.agenda",
-  "version": "0.3.0-alpha.1",
+  "version": "0.4.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
-  "plugin": {
-    "consumes": ["bus", "db", "log"],
-    "provides": ["agenda"]
-  },
   "dependencies": {
     "agenda": "^0.9.1"
+  },
+  "peerDependencies": {
+    "@briskhome/core": "0.4.0"
+  },
+  "extensions": {
+    "com.briskhome.module": [{ "dependencies": ["bus", "db", "log"] }]
   }
 }
