--- a/src/core.bus/package.json
+++ b/src/core.bus/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@briskhome/core.bus",
-  "version": "0.3.0-alpha.1",
+  "version": "0.4.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
-  "description": "A core plugin which provides a common bus interface for other plugins to communicate and cooperate.",
-  "plugin": {
-    "consumes": ["log"],
-    "provides": ["bus"]
+  "description":
+    "A core plugin which provides a common bus interface for other plugins to communicate and cooperate.",
+  "peerDependencies": {
+    "@briskhome/core": "0.4.0"
+  },
+  "extensions": {
+    "com.briskhome.module": [{ "dependencies": ["log"] }]
   }
 }
