--- a/src/core.config/package.json
+++ b/src/core.config/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@briskhome/core.config",
-  "version": "0.3.0-alpha.1",
+  "version": "0.4.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
-  "plugin": {
-    "consumes": [],
-    "provides": [
-      "config"
-    ]
-  },
   "dependencies": {
     "nconf": "^0.8.4",
     "properties": "^1.2.1"
+  },
+  "peerDependencies": {
+    "@briskhome/core": "0.4.0"
+  },
+  "extensions": {
+    "com.briskhome.module": [{}]
   }
 }
