--- a/src/core.dataloader/package.json
+++ b/src/core.dataloader/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@briskhome/core.dataloader",
-  "version": "0.3.0-alpha.1",
+  "version": "0.4.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
-  "plugin": {
-    "consumes": ["db", "log"],
-    "provides": ["dataloader"]
+  "peerDependencies": {
+    "@briskhome/core": "0.4.0"
+  },
+  "extensions": {
+    "com.briskhome.module": [{ "dependencies": ["db", "log"] }]
   }
 }
