--- a/src/core.webapp/package.json
+++ b/src/core.webapp/package.json
@@ -1,10 +1,17 @@
 {
   "name": "@briskhome/core.webapp",
-  "version": "0.3.0-alpha.1",
+  "version": "0.4.0",
   "main": "index.js",
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
-  "plugin": {
-    "consumes": ["graphql", "log", "dataloader", "db"],
-    "provides": ["webapp"]
+  "peerDependencies": {
+    "@briskhome/core": "0.4.0"
+  },
+  "extensions": {
+    "com.briskhome.module": [
+      { "dependencies": ["dataloader", "db", "graphql", "log"] }
+    ],
+    "briskhome:db:model": [
+      { "name": "Session", "main": "./models/SessionModel.js" }
+    ]
   }
 }
