--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,4 @@
 version: 2
-workflows:
-  version: 2
-  tests:
-    jobs: 
-      - init
-      - lint:
-          requires:
-            - init
-      - flow:
-          requires:
-            - init
-      - test:
-          requires:
-            - init
-      - babel:
-          requires:
-            - lint
-            - flow
-            - test
-      - webpack:
-          requires:
-            - lint
-            - flow
-            - test
-      - run:
-          requires:
-            - babel
-            - webpack
-
 jobs:
   init:
     docker: &node
@@ -100,3 +71,43 @@ jobs:
           name: Restore webpack cache
           key: v1-briskhome-webpack-{{ .Revision }}
       - run: node lib/core.js --stop
+  deploy:
+    docker:
+      - image: *node
+    steps:
+      - checkout
+      - run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+workflows:
+  version: 2
+  tests:
+    jobs:
+      - init
+      - lint:
+          requires:
+            - init
+      - flow:
+          requires:
+            - init
+      - test:
+          requires:
+            - init
+      - babel:
+          requires:
+            - lint
+            - flow
+            - test
+      - webpack:
+          requires:
+            - lint
+            - flow
+            - test
+      - run:
+          requires:
+            - babel
+            - webpack
+      - deploy:
+          requires:
+            - run
+          filters:
+            branches:
+              only: master
