chore: fix main path in package.json

--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "lib/core/index.js",
   "scripts": {
     "babel": "node_modules/.bin/babel src -d lib --copy-files --ignore node_modules",
-    "babel-watch": "vagrant up && node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules & yarn webpack-watch",
+    "babel-watch": "node_modules/.bin/babel src --watch --out-dir lib --copy-files --ignore node_modules & yarn webpack-watch",
     "build": "yarn build-cleanup && yarn babel && yarn webpack",
     "build-cleanup": "rm -rf lib/*",
     "build-watch": "yarn build-cleanup && yarn babel-watch",
     "flow": "node_modules/.bin/flow",
     "lint": "eslint src --ext .js,.jsx --ignore-pattern '**/*.spec.js' --ignore-pattern '**/__mocks__' --ignore-pattern '**/__tests__/*' --ignore-pattern '**/__css__/*' --ignore-pattern '**/__e2e__/*' --ignore-pattern '**/*_spec.js'",
-    "start": "node lib/core.js | bunyan -o short",
-    "start-watch": "node_modules/.bin/nodemon lib/core.js | node_modules/.bin/bunyan -o short",
-    "start-stop": "node lib/core.js --stop",
-    "start-ugly": "node lib/core.js --ugly | bunyan -o short",
+    "start": "node lib/core/index.js | bunyan -o short",
+    "start-watch": "node_modules/.bin/nodemon lib/core/index.js | node_modules/.bin/bunyan -o short",
+    "start-stop": "node lib/core/index.js --stop",
+    "start-ugly": "node lib/core/index.js --ugly | bunyan -o short",
     "test": "node_modules/.bin/jest --testPathPattern='__tests__'",
     "test-css": "node_modules/.bin/jest --testPathPattern='__css__' --env='./utilities/jest/chromeEnvironment.js'",
     "test-e2e": "node_modules/.bin/jest --testPathPattern='__e2e__' --env='./utilities/jest/chromeEnvironment.js'",
