--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
       - restore_cache: &restore_webpack_cache
           name: Restore webpack cache
           key: v1-briskhome-webpack-{{ .Revision }}
-      - run: node lib/core.js --stop
+      - run: node lib/core/index.js --stop
   deploy:
     docker: *node
     steps:
