--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "author": "Egor Zaitsev <ezaitsev@briskhome.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=5.0.0"
+    "node": "8.12.0"
   },
   "devDependencies": {
     "@storybook/react": "^3.2.5",
