chore: force push to heroku

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,4 +113,4 @@ jobs:
       - checkout
       - run:
           name: Deploy to Heroku
-          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+          command: git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
