chore: update prettier to 1.14.3

--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^21.2.0",
-    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "^6.10.3",
     "flow-bin": "0.61.0",
     "jest": "22.0.4",
     "jest-image-snapshot": "^2.2.1",
-    "prettier": "1.9.2",
+    "prettier": "1.14.3",
     "puppeteer": "^0.13.0",
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
